Not hiding the cursor when pressing the key repeatedly

If the KeyEvent has EF_IS_REPEAT flag, the cursor should not be
hidden.

In original code, when user moves the mouse while holding down
the key, UI looks weird.

R=afakhry@chromium.org

(cherry picked from commit 7b87a014ee5d90017b5c1027297684aa27aa5296)

Bug: 855163
Test: ash unittests
Change-Id: Ib1fa6cb7b6002ab38e9c177edafd735d2114f4d1
Reviewed-on: https://chromium-review.googlesource.com/1191328
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Commit-Queue: Andrew Xu <andrewxu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591060}
Former-commit-id: 929c1eea7c58e4d656a57837e6161c88d79cbec8